[package]
name = "icfpc2007"
version = "0.1.0"
authors = ["Dmitry Polyanitsa <coffeecup.winner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfx = "0.18.2"
gfx_device_gl = "0.16.2"
gfx_window_glutin = "0.31"
glutin = "0.21"
imgui = "0.4.0"
imgui-gfx-renderer = "0.4.0"
imgui-winit-support = { version = "0.4.0", default-features = false, features = ["winit-19"] }
png = "0.16.7"
